# NightOS64

./: .gitignore  .gitmodules  LICENSE  Makefile  binutils.patch  build.sh  build_lib.sh  config.sh  default-host.sh  gcc.patch  gdb_setup.py  grub.cfg  headers.sh  limine.conf  meson.build  nightos-meson-target.txt  nightos.kernel  sonar-project.properties
.github/workflows/: makefile.yml
init/: Makefile  init.c  linker.ld
kernel/: acpi.h  alloc.h  error.h  gdt.h  idt.h  kernel.c  keyboard.h  lock.h  memmgr.h  multiboot.h  multiboot2.h  mutex.h  serial.c  serial.h  ssfn.h  symbol.h  terminal.h  test.c  test.h  timer.h
kernel/alloc/: liballoc.c  liballoc.h
kernel/arch/amd64/: alloc.c  boot.S  context_switch.S  font.S  gdt.S  gdt.c  idt.S  idt.c  io.h  linker.ld  make.config  memmgr.S  memmgr.c  memmgr.c.d  meson.build  pic.c  pit.c  start.S
kernel/arch/amd64/hid/: ps2.c  ps2.h
kernel/fs/: cache.c  cache.h  console.c  console.h  fat.c  fat.h  isofs.c  isofs.h  pty.c  pty.h  ramfs.c  ramfs.h  tarfs.c  tarfs.h  vfs.c  vfs.h
kernel/pci/: ahci.c  ahci.h  io.h  pci.c  pci.h
kernel/proc/: ipc.c  message.h  process.c  process.h  server.c  server.h
kernel/program/: elf.c  elf.h
kernel/sys/: error.c  mutex.c  syscall.c
libc/: Makefile
libc/arch/amd64/: crt0.S
libc/include/: errno.h  fcntl.h  stdint.h  stdio.h  stdlib.h  string.h  syscall.h  time.h  unistd.h
libc/include/kernel/: hashtable.h  list.h  map.h  mutex.h  ring_buffer.h  tree.h
libc/include/sys/: cdefs.h  types.h
libc/kernel/: hashtable.c  list.c  ring_buffer.c  syscall.c  tree.c
libc/stdio/: putchar.c
libc/stdlib/: exit.c  itoa.c  setup.c
libc/string/: memchr.c  strdup.c  string.c
sysroot/: test.txt
sysroot/etc/: termcap
